<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototype</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="getTip_button_text">Get Tip!</string>
    <string name="findEUI_text">Find your EUI!</string>
    <string name="kwh_hint">kwh</string>
    <string name="ppl_hint"># of people</string>
    <string name="sqrfoot_hint">sqare footage</string>
    <string name="calcEUIButton_text">Calculate</string>
    <string name="clearEUIButton_text">Clear</string>
    <string name="euiInfoTextView_text">What is EUI?</string>
    <string name="eui_description">Energy Utilization Index (EUI) is expressed as energy per square foot per year. It’s calculated by dividing the total energy consumed by the building in one year (measured in kBtu or GJ) by the total gross floor area of the building. It is most commonly used for commercial and industrial buildings so the building’s energy managers can see how they stack up against national averages regardless of the size of the building.\n\nFor example, a university’s energy manager could check its EUI against all other schools’ EUIs and see how well it compares. We wanted to use that method for residential homes. The only difference between our method and the industry used method is we divide the EUI by the number of people living in the home. This puts a family of 5 on a level playing field with a family of 2.\n\nNow the only difference between your EUI and your neighbour’s is the construction of your home, and your energy behaviours. The lower your EUI score the more energy efficient you are.  The ultimate goal is to have a net-zero energy home. That means your EUI is equal to 0.\n\nSo go ahead challenge your family and friends to see who has a lower score by the end of the month.</string>
    <string name="tutorialButton_text">Learn how to read your meter!</string>
    <string name="tutorialTextView_text">PLACEHOLDER</string>
    <string name="whyMeterTextView_text">Why should I read my meter?</string>
    <string name="whyMeterDescription_text">Reading your electrical meter is easy to do and can help you manage your electricity bills. The readings you get will measure in kilowatt-hours (kWh). Your power company charges you based on how many kWh you use in a monthly billing period. Our research has shown that a month is too long for customers to go without seeing how much electricity they are using.\n\nImagine going to the grocery store and there are no prices listed anywhere. You put whatever you want in the cart and just walk outside with them without paying. After a month of doing this, the grocery store sends you a bill for all the groceries you took in the last thirty days.\n\nSounds crazy, right?\n\nWell, this is exactly how the power company is setup to bill you for your energy usage. Being able to read your meter once a week will allow you to manage your energy bills by giving you the power to tweak how much energy you’re using before the bill comes in. You never know, by the end of the month it might even help you find mistakes your power company has made by accidentally overbilling you.</string>
    <string name="meterTutorialButton_text">Teach me how to read my meter</string>
    <string name="tutorial_text">Generally there are two types of residential meters in New Brunswick. Newer meters have digital numbers on them. If you have this type of meter the number on the screen is the number you use as your reading. An analog or dial meter is much more common. These meters, while a little trickier at first, are easy to interpret once you understand how to read them.\n\nTypically on a dial meter you will see four or five small dials. These dials are numbered from zero to nine. To read your meter, follow these steps:\n\n1. Start at the dial on the left and look at where the pointer is.\n\n2. If the pointer falls between two numbers write down the smaller number (*if it falls between nine and zero write down nine)\n\n3. If the pointer appears to be exactly on a number, read the next lowest number unless the pointer to its right has passed zero.\n\n4. Continue reading and recording the numbers on the dials from left to right until all dials have been read. </string>
    <string name="exampleButton_text">Show me an example of meter reading</string>
    <string name="meterHintsButton_text">Hints for reading your meter</string>
    <string name="hints_text">When reading your electric meter, keep these hints in mind:\n\n1. Stand directly in front of the meter so that you can clearly see the location of each pointer.\n\n2. If the pointer is between two numbers, read the number the pointer has just passed, always the lowest number.\n\n3. If the pointer is between 9 and 0, always read 9.\n\n4. If the pointer appears to be exactly on a number, read the next lowest number unless the pointer to its right has passed zero. Since the first dial has no dial to its right, the number must be read independently.\n\n5. If your meter has digital numbers, use those as your reading.\n\n6. Each meter is numbered. Make note of your meter number.</string>
    <string name="exampleTitleTextView_text">We\'ll use the meter below as an example.</string>
    <string name="example_meter_img_desc">Example of a meter that could be typically found on the average household</string>
    <string name="exampleMeterTextView_text">The pointer on the far left dial has passed 8, and is between 8 and 9. Read the smaller number which the pointer just passed, which is 8.\n\nThe pointer on the next dial looks like it is right on the 4. But, the dial to its right has not passed zero. So, you would read this dial as 3.\n\nThe next dial has passed 8, and is between 8 and 9. Again, read the smaller number which the pointer has just passed, which is 8.\n\nThe second pointer from the right has just passed 9, and is between 9 and 0. Read this as 9.\n\nThe pointer on the far right is directly on number 5. Read this as 5.\n\nThis meter reads 83895</string>
    <string name="readUsageButton_text">How to read the amount of electricity used in one week</string>
    <string name="readUsageTextView_text">How to read the amount of electricity used in one week:</string>
    <string name="weekOneImage_contentdesc">Week one meter</string>
    <string name="weekOneTextView_text">The reading on week&#8211;one is 2&#8211;6&#8211;3&#8211;5.</string>
    <string name="weekTwoImage_contentdesc">Week two meter</string>
    <string name="weekTwoTextView_text">A week later at about the same time the reading is 2&#8211;8&#8211;3&#8211;9.</string>
    <string name="resultsTextView_text">If you subtract the earlier reading from the new reading:</string>
    <string name="resultsMathTextView_text">2839 &#8211; 2635 = 204</string>
    <string name="answerTextView_text">In this case,  204 kWh were used.</string>
    <string name="listenerButton_text">Start reading your meter!</string>
    <string name="speakButton_text">Tap to start listening!</string>
    <string name="resetButton_text">Reset</string>
    <string name="submitButton_text">Submit Reading</string>

</resources>
