<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/exampleTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/exampleTitleTextView_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exampleTitleTextView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/example_meter_img_desc"
        android:scaleType="matrix"
        android:src="@drawable/meter_how_static" />

    <TextView
        android:id="@+id/exampleMeterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/exampleMeterTextView_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="13sp"
        android:width="290dp" />

</RelativeLayout>
